# astro-stack

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_session_target_coords.py  0003_session_acquired_at.py  0004_session_gallery.py  0005_session_capture_metadata.py  0006_job_profile_snapshot.py  0007_profile_sharing.py  0008_denoise_engine.py  0009_observation_sites.py  0010_followed_objects.py  0011_session_live_mode.py  0012_session_owner.py  0013_session_dark_flat_count.py  0014_app_settings.py
app/: main.py
app/api/middleware/: auth.py  error_handler.py
app/api/v1/: admin_gallery.py  auth.py  catalog.py  gallery.py  jobs.py  me_followed.py  me_sites.py  planning.py  profiles.py  sessions.py  settings.py
app/core/: base.py  config.py  database.py  errors.py  logging.py
app/domain/: app_settings.py  followed_object.py  gallery.py  job.py  observation_site.py  profile.py  session.py  visibility.py  ws_event.py
app/infrastructure/catalog/: __init__.py  messier.py  openngc.py  popular.py  registry.py
app/infrastructure/queue/: broker.py  events_bus.py
app/infrastructure/repositories/: base.py  followed_object_repo.py  gallery_download_repo.py  job_repo.py  observation_site_repo.py  profile_repo.py  session_repo.py
app/infrastructure/storage/: file_store.py  model_store.py
app/infrastructure/weather/: __init__.py  cache.py  openmeteo_client.py
app/livestack/: __init__.py  autostretch.py  preview.py  processors.py  recommender.py  service.py  state.py
app/pipeline/: base_step.py  orchestrator.py  retry.py
app/pipeline/adapters/: astap_adapter.py  cosmic_adapter.py  graxpert_adapter.py  siril_adapter.py  siril_script_builder.py
app/pipeline/steps/: denoise.py  export.py  gradient_removal.py  plate_solving.py  preprocessing.py  raw_conversion.py  sharpen.py  star_separation.py  stretch_color.py  super_resolution.py
app/pipeline/utils/: display.py  (+3 more)
app/services/: app_settings_service.py  gallery_admin_service.py  gallery_service.py  job_service.py  planner_service.py  session_service.py  watcher_service.py
app/workers/: settings.py  tasks.py
docs/: frontend-generation-prompt.md
scripts/: init-models.sh  probe.py  probe_stretch.py
scripts/profiles/: galaxy-autostretch.json  galaxy-no-graxpert.json  galaxy-polynomial.json  orion-stock-dslr.json  preset-quality.json  preset-quick.json  preset-standard.json
scripts/siril/: preprocessing_lights_only.ssf
tests/integration/: test_observation_sites_api.py  test_pipeline.py  test_planning_api.py
tests/unit/: test_adaptive_overrides.py  test_denoise_step.py  test_display_camera.py  test_errors.py  test_file_store.py  test_gradient_removal_ai_model.py  test_graxpert_adapter.py  test_livestack_autostretch.py  test_livestack_recommender.py  test_object_type.py  test_openmeteo_client.py  test_planner_service.py  test_profile_presets.py  test_retry.py  test_script_builder.py  test_siril_adapter_errors.py  test_siril_parser.py  test_ws_events.py
traefik/: traefik.yml
traefik/dynamic/: middleware.yml
(+2 files in other folders)
